frontend: Fix layout issues

--- a/frontend/src/public/style.css
+++ b/frontend/src/public/style.css
@@ -1,14 +1,12 @@
 body{
-  overflow: hidden;
   position: absolute;
   width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .icon {
-  width: 30vw;
-  height: 30vw;
+  width: 35vw;
+  height: 35vw;
 }
